--- a/sources/public/index.html
+++ b/sources/public/index.html
@@ -83,8 +83,8 @@
             <h1>estate-server</h1>
             <p>Version 0.1.0</p>
 
-            <h3>OpenAPI spec: <a href="/openapi.json">/openapi.json</a></h3>
-            <h3>API Explorer: <a href="/explorer">/explorer</a></h3>
+            <h3>OpenAPI spec: <a href="openapi.json">/openapi.json</a></h3>
+            <h3>API Explorer: <a href="explorer">/explorer</a></h3>
         </div>
 
         <footer class="power">
